fix overflow style

--- a/themes/doc/source/style/_doc/formatting.scss
+++ b/themes/doc/source/style/_doc/formatting.scss
@@ -124,6 +124,7 @@
 
   .table-wrapper {
     margin: 10px 0;
+    overflow: auto;
     background-color: white;
   }
   
